--- a/lang/en.json
+++ b/lang/en.json
@@ -10,5 +10,6 @@
    "database_label" : "Database name",
    "username_label" : "Database username",
    "interval_label" : "Update interval",
-   "interval_helper" : "Sets the interval (in minutes) for statistics updates. If left empty, then the statistics will only be updates if values change (not recommended)."
+   "interval_helper" : "Sets the interval (in minutes) for statistics updates. If left empty, then the statistics will only be updates if values change (not recommended).",
+   "error" : "Could not post influxdb statistics. Please check logfiles for details"
 }
