Separate port settings

--- a/lang/en.json
+++ b/lang/en.json
@@ -5,7 +5,8 @@
    "interval_helper" : "Sets the interval (in minutes) for statistics updates. If left empty, then the statistics will only be updates if values change (not recommended).",
    "interval_label" : "Update interval",
    "password_label" : "Database password",
-   "server_helper" : "The final url used for writing will be $URL:8086/write",
+   "port_label": "Database Server Port",
+   "server_helper" : "The final url used for writing will be $URL:$PORT/write. You have to include the protocol (ie. https:// )",
    "server_label" : "Database Server URL",
    "tags_helper" : "All devices tagged with this label will be handled by this app ",
    "tags_label" : "Tags",
