--- a/lang/en.json
+++ b/lang/en.json
@@ -1,15 +1,15 @@
 {
    "database_label" : "Database name",
-   "m_descr" : "Store sensor data in InfluxDB instances ",
    "error" : "Could not post influxdb statistics. Please check logfiles for details",
    "interval_helper" : "Sets the interval (in minutes) for statistics updates. If left empty, then the statistics will only be updates if values change (not recommended).",
    "interval_label" : "Update interval",
+   "m_descr" : "Store sensor data in InfluxDB instances \nCheck https://github.com/maros/Zway-InfluxDbStats//blob/master/README.md for detailed documentation.",
+   "m_title" : "Collect stats via InfluxDb",
    "password_label" : "Database password",
-   "port_label": "Database Server Port",
+   "port_label" : "Database Server Port",
    "server_helper" : "The final url used for writing will be $URL:$PORT/write. You have to include the protocol (ie. https:// )",
    "server_label" : "Database Server URL",
    "tags_helper" : "All devices tagged with this label will be handled by this app ",
    "tags_label" : "Tags",
-   "m_title" : "Collect stats via InfluxDb",
    "username_label" : "Database username"
 }
