--- a/lang/de.json
+++ b/lang/de.json
@@ -6,7 +6,7 @@
    "interval_helper" : "Spezifiziert das Aktualisierungs Interval in Minuten in dem alle Statistiken an InfluxDB geschickt werden. Wenn dieser Wert leer ist, dann werden die Device Statistiken nur geschickt wenn sich Werte ändern. (Nicht empfohlen).",
    "interval_label" : "Aktualisierungs Interval",
    "m_descr" : "Speichert Sensoren Messwerte und Zwave Netzwerke Statistiken in InfluxDB Instanzen. InfluxDB ist eine Zeitserien Datenbank die Zeit Messwerte speichern und auswerten kann. Um dieses Modul zu betreiben benötigt man eine externe InfluxDB Installtion.<br>Siehe <a href=https://github.com/maros/Zway-InfluxDbStats/blob/master/README.md>github.com/maros/Zway-InfluxDbStats</a> für detailliertere Dokumentation.",
-   "m_title" : "Sammelt Statistiken via InfluxDb",
+   "m_title" : "InfluxDb Statistiken",
    "password_label" : "Database Passwort",
    "port_label" : "Database Server Port",
    "server_helper" : "Die tatsächliche benutzte URL wird im Frotmat $URL:$PORT/write sein. Das Protokoll (zB. https:// ) muss angegeben werden",
