--- a/lang/en.json
+++ b/lang/en.json
@@ -6,7 +6,7 @@
    "interval_helper" : "Sets the interval (in minutes) for statistics updates. If left empty, then the statistics will only be updates if values change (not recommended).",
    "interval_label" : "Update interval",
    "m_descr" : "Store sensor data and Zwave Network data in InfluxDB instances. InfluxDB is a time series database that can be used for storing and analyzing measurements and statistics over time. You need an external InfluxDB instance to operate this module. <br>Check <a href=https://github.com/maros/Zway-InfluxDbStats/blob/master/README.md>github.com/maros/Zway-InfluxDbStats</a> for detailed documentation.",
-   "m_title" : "Collect stats via InfluxDb",
+   "m_title" : "InfluxDb Statistics Collector",
    "password_label" : "Database password",
    "port_label" : "Database Server Port",
    "server_helper" : "The final url used for writing will be $URL:$PORT/write. You have to include the protocol (ie. https:// )",
