--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+1.06 2017 Jun 24, Sat
+    * Ignore non numeric/undefined level
+    * Update copyright and fix module version
+
 1.05 2016 Dec 05, Mon
     * Cleanup
     * Fallback for undefined values
