--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+1.07 2019 Apr 26, Fri
+    * New module icon
+    * Tranform string to float
+    * Fix invalid tags
+
 1.06 2017 Jun 24, Sat
     * Ignore non numeric/undefined level
     * Update copyright and fix module version
