Use InfluxDb 2 write api
- rename module to "InfluxDb2Stats"
- config uses: organisation, bucket, token
- write to influx db using /api/v2/write endpoint

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+2.0b 2022 May 01, Sun
+    * Refactor for influxdb2
+    
 1.07 2019 Apr 26, Fri
     * New module icon
     * Tranform string to float
